# vaapi-build

Testing/: docker-run.sh  env.sh  sanity.sh  vaapi.sh  xraw.sh
docker-build/: build.sh  docker-compose.yaml  dockerfile  dockerfile_base_patch  dockerfile_dlstreamer  dockerfile_dlstreamer_self_gmmlib  dockerfile_material  dockerfile_nvr_official_vaapi_vasharing_wlc  dockerfile_nvr_official_vaapi_vasharing_wlc_rebuild  dockerfile_nvr_official_vaapi_wlc  dockerfile_nvr_official_vaapi_wlc_opencl  dockerfile_nvr_official_vaapi_wlc_raw  dockerfile_nvr_release_eflow_add  dockerfile_nvr_release_eflow_gst  dockerfile_nvr_self_build_default  dockerfile_nvr_v2.0_blueprint  dockerfile_official_add  dockerfile_official_add_neo  dockerfile_openvino  run.sh  run_container.sh  run_eflow.sh
docker-build/applications.iot.workloads.common-lib/bps/: CMakeLists.txt  README.md
docker-build/applications.iot.workloads.common-lib/bps/bps/: CMakeLists.txt  gstbufferspersecond.c
docker-build/applications.iot.workloads.common-lib/edgesys_metadata/: README.md
docker-build/applications.iot.workloads.common-lib/edgesys_metadata/excel/: add-metadata.xlsx  gst-metadata.xlsx  ifpd-metadata.xlsx  nvr-metadata.xlsx
docker-build/applications.iot.workloads.common-lib/edgesys_metadata/scripts/: element_metadata_generator.py  kpi_metadata_generator.py  workload_yaml_generator.py
docker-build/applications.iot.workloads.common-lib/gstreamer_plugins/bps/: CMakeLists.txt
docker-build/applications.iot.workloads.common-lib/gstreamer_plugins/gva_crop/: CMakeLists.txt  README.md
docker-build/applications.iot.workloads.common-lib/gstreamer_plugins/gva_crop/gva_crop/: CMakeLists.txt  common.h  gva_crop.cpp  gva_crop.hpp  main.cpp
docker-build/applications.iot.workloads.common-lib/pipeline_engine/engine/: Makefile  README.md  go.mod  go.sum
docker-build/applications.iot.workloads.common-lib/pipeline_engine/engine/controller/: controller.go  controller_test.go
docker-build/applications.iot.workloads.common-lib/pipeline_engine/engine/converter/: converter.go  converter_test.go  dag.go  online.go  online_test.go
docker-build/applications.iot.workloads.common-lib/pipeline_engine/engine/test_data/: nvr-adl-proxy-workload-h1-d-hevc-gpu.json  online-pipeline.json
docker-build/applications.iot.workloads.common-lib/pipeline_engine/engine/test_data/pipelines/: 4k-videowall-vacomp-4kenc-pipeline.json  4k-videowall-vacomp-default-pipeline.json  4k-videowall-vacomp-va1-pipeline.json  density-pipeline.json  primary-encrypt-pipeline.json  primary-transcode-pipeline.json
docker-build/applications.iot.workloads.common-lib/pipeline_engine/engine/utils/: envar.go  str.go
docker-build/applications.iot.workloads.common-lib/pipeline_engine/pipelineController/: index.js  package-lock.json  package.json
docker-build/applications.iot.workloads.common-lib/pipeline_engine/pipelineExecutor/: dlm-gst-run.py  index.js  package-lock.json  package.json  pipeline-executor.js  wlc-mqtt.js
docker-build/applications.iot.workloads.common-lib/provisioning_scripts/: ubuntu_utils.py  update-certificates.sh
docker-build/docker/: .Dockerfile.swp  .gitattributes  Dockerfile
docker-build/docker/gva_crop/: .gitignore
docker-build/docker/gva_crop/gva_crop/: gva_crop.cpp
docker-build/docker/patches/: 0001-VAMemory.patch  0001-bugfix-change-error-variable-name.patch  0001-drm-lease-x11.patch  0001-kmssink-fd-prop.patch  0001-kmssink-signal-callback.patch  0001-kpi-commonlib.patch  0001-perf-count-for-v1.6.patch  0001-ubuntu-22.04.patch  0001-use-topic-name-from-env.patch  0002-fix-python-videoinfo.patch  0002-kmssink-dmabuf-modifier.patch  KPI_Err_Monitor.py  cpu_load.patch  dlstreamer_153_kpi.patch  dlstreamer_setupvars.sh  gstenv.sh  opencv_setupvars.sh  patch_flush  patch_no_flush  provision.py
docker-build/old/: dockerfile_base  dockerfile_basev2  dockerfile_dlstreamer  dockerfile_dlstreamer_debug  dockerfile_dlstreamer_debug_replace  dockerfile_no_gstreamer  dockerfile_nvr_add  dockerfile_nvr_add_vah  dockerfile_nvr_official_vaapi  dockerfile_nvr_official_vaapi_vasharing_wlc_rebuild  dockerfile_nvr_official_vaapi_wlc_opencl  dockerfile_nvr_self_build_addon  dockerfile_old  pipeline-eflow.sh
docker-build/scripts/: aibox.js  pipeline-eflow.sh
